examples/errors/underscore-correct.tex
\documentclass{article}
\begin{document}
Lorem ipsum dolor sit amet\_ consectetur adipisicing elit
\end{document}
